# action-deploy-example

./: .dockerignore  Dockerfile  appspec.yml  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
api/: main.py
nginx/: Dockerfile  nginx.conf
nginx/sites/: test.conf
scripts/: build_image.sh  docker_compose_down.sh  docker_compose_up.sh  install_dependencies.sh
